--- a/cloud-lab01.yml
+++ b/cloud-lab01.yml
@@ -6,5 +6,5 @@ logging:
 
 app:
   test:
-    value: test value
-    other-value:  test other-value
+    value: test value jonatan
+    other-value:  test other value thaís
