--- a/student-service.yml
+++ b/student-service.yml
@@ -2,7 +2,13 @@ server:
   port: ${PORT:8081}
   
 logging:
-  level: debug 
+  level: debug
+spring:
+  h2:
+    console:
+      enabled: true
+  datasource:
+url: jdbc:h2:mem:studentdb  
 
 app:
   test:
