--- a/person-service.yml
+++ b/person-service.yml
@@ -3,3 +3,15 @@ server:
 
 logging:
   level: debug
+
+spring:
+  h2:
+    console:
+      enabled: true
+    datasource:
+      url: jdbc:h2:mem:persondb  
+
+app:
+  test:
+    value: test value jonatan
+    other-value: test other value thaís
