--- a/supero-template.yml
+++ b/supero-template.yml
@@ -1,9 +1,6 @@
 server:
   port: ${PORT:8081}
 
-logging:
-  level: debug
-
 spring:
   h2:
     console:
@@ -13,5 +10,5 @@ spring:
 
 app:
   test:
-    value: test value
-    other-value: test other value
+    - value: test value
+    - other-value: test other value
